* Tue Jan 09 2018 Nick Markowski <nicholas.markowski@onyxpoint.com> - 7.1.3-0
- Updated compliance suite to use new inspec profile,
  https://github.com/simp/inspec-profile-disa_stig-el7
- Removed the el6 nodeset from the compliance suite; there are no
  simp-supported el6 inspec profiles at this time.
- Ensured git installed as it's a dependency of our inspec profiles

* Mon Nov 13 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.2-0
- /var/run/faillock should be tagged under 'login'

* Thu Aug 31 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.1-0
- Adjust audit.rules mode per inspec testing

* Mon Aug 21 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.0-0
- Updated to use augeasproviders_grub 3
- Added the ability to log calls to the 'rpm' and 'yum' commands

* Mon May 22 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.2-0
- Fix bug whereby audit.rules file was not being regenerated prior
  to auditd service start in CentOS/RedHat 6.
- Update puppet version in metadata.json

* Mon Mar 27 2017 Nicholas Hughes <nicholasmhughes@github.com> - 7.0.1-0
- Audit kernel module tools from /usr/bin as well as /bin and /sbin
- Correct auditing /var/log/tallylock, it should have been /var/log/tallylog

* Thu Feb 22 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
- Changed auditd::failure_mode to '1' by default since the compliant audit
  rules were causing routine system restarts. The new value will default to
  sending printk messages when the buffer is full.
- Changed all rules that were exit,always to be always,exit

* Tue Jan 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- In response to the DISA STIG Requirements
  - Added 'open_by_handle_at' to the 'access' key
  - Added watches on /varlog/faillock and /var/log/tallylock
  - Added watches on /usr/sbin/insmod and /bin/kmod
  - Added permissions modification notification for 'chmod'
- Renamed auditd::add_rules to auditd::rule
- Split the audit permissions rules into separate lines