@@ -1,4 +1,6 @@
-# This class is called from auditd for install.
+# NOTE: THIS IS A [PRIVATE](https://github.com/puppetlabs/puppetlabs-stdlib#assert_private) CLASS**
+#
+# Install the auditd packages
 #
 class auditd::install {
   assert_private()
